; ModuleID = '/home/carl/AnghaBench/git/extr_attr.c_attr_check_free.c'
source_filename = "/home/carl/AnghaBench/git/extr_attr.c_attr_check_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attr_check = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @attr_check_free(%struct.attr_check* %0) #0 {
  %2 = alloca %struct.attr_check*, align 8
  store %struct.attr_check* %0, %struct.attr_check** %2, align 8
  %3 = load %struct.attr_check*, %struct.attr_check** %2, align 8
  %4 = icmp ne %struct.attr_check* %3, null
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load %struct.attr_check*, %struct.attr_check** %2, align 8
  %7 = call i32 @check_vector_remove(%struct.attr_check* %6)
  %8 = load %struct.attr_check*, %struct.attr_check** %2, align 8
  %9 = call i32 @attr_check_clear(%struct.attr_check* %8)
  %10 = load %struct.attr_check*, %struct.attr_check** %2, align 8
  %11 = call i32 @free(%struct.attr_check* %10)
  br label %12

12:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @check_vector_remove(%struct.attr_check*) #1

declare dso_local i32 @attr_check_clear(%struct.attr_check*) #1

declare dso_local i32 @free(%struct.attr_check*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
